<resources>

    <!--    Car Information -->
    <string name="car_info">Car Information</string>
    <!--    <string name="car_data">Car Model</string>-->
    <string name="car_model">Car Model</string>
    <string name="car_model_text">Enter the car model</string>


    <string name="car_make">Car Make</string>
    <string name="car_make_text">Enter car make</string>

    <string name="car_plate">Car Plate</string>
    <string name="car_plate_text">Enter car number plate</string>

    <string name="car_terms">I agree with the car information provided is correct </string>
    <string name="save_car_info">Submit</string>

    <!--    Emergency Contact Information -->

    <string name="info_header">Emergency Contact Information </string>
    <string name="first_contact_name">First Contact Name</string>
    <string name="first_contact_name_txt">Full Name</string>
    <string name="phone1">Mobile </string>
    <string name="phone_txt">Phone Number</string>
    <string name="relation1">Relationship with Contact</string>
    <string name="relation2">Relationship </string>


    <string name="create_contact">Submit</string>

    <!--    Text View  -->

    <string name="create_name">Contact Name</string>
    <string name="create_phone">Contact Phone</string>
    <string name="create_relation">Contact Relationship</string>


    <string name="app_name">Ride Pal</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="register">Fill your Information</string>
    <!--    <string name="single _rides">Single Rides</string>-->
    <string name="login_email_hint">Email</string>
    <string name="upload">Upload your profile picture</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="reg_pass">Password</string>
    <string name="to_do">TODO</string>
    <string name="create">Sign Up</string>
    <string name="have">Already registered ?</string>
    <string name="login_instead">Already registered ?</string>

    <string name="email">Email</string>


    <string name="address">Address</string>
    <string name="date_birth">DOB</string>
    <string name="enter_address">Enter your address</string>
    <string name="dob">Select your dob</string>
    <string name="date">Date of Birth (dd/mm/yyyy)</string>
    <string name="pass">Create Password</string>
    <string name="terms">I agree with the Terms of Service and Privacy Policy</string>
    <string name="upload_pic">Upload</string>
    <string name="choose_image">Choose Picture</string>
    <string name="todo">ImageView to Display Pic</string>
    <string name="mobile_number">Mobile</string>
    <string name="model">Car Model</string>
    <string name="name">Full Name</string>
    <string name="male">Male</string>
    <string name="delete_password">Password</string>
    <string name="title_delete">Delete your Profile</string>
    <string name="tip_delete">Enter your  current password to delete your account</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="tip_profile">Update your profile</string>
    <string name="btn_profile">Update profile</string>
    <string name="settings">Settings</string>
    <string name="security">Security</string>
    <string name="edit_profile">Edit</string>
    <string name="new_password">Enter your new password</string>
    <string name="pass_tip">Enter a password you can remember</string>
    <string name="current_password">Enter current password</string>
    <string name="password_current">Current password:</string>
    <string name="password_new">New password:</string>
    <string name="confirm_password_new">Confirm password</string>
    <string name="enter_confirm_password_new">Re-enter the new password</string>
    <string name="password_change">Change Password</string>
    <string name="auth">Authenticate</string>
    <string name="caution">Are you sure..?</string>
    <string name="text_pass">Update your Password</string>
    <string name="language">Language</string>
    <string name="regional">Regional</string>

    <string name="person">User</string>
    <string name="user_info">User info</string>
    <string name="user_details">User Information</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit">Edit</string>
    <string name="desc">Your profile pic</string>
    <string name="notification">Icon</string>
    <string name="profile">Profile</string>
    <string name="back">Back Icon</string>
    <string name="dark">Dark Mode</string>
    <string name="sign_up">Welcome to Ride Pal</string>
    <string name="cars">Car Information </string>

    <string name="quotes">""</string>
    <string name="btn_delete">Delete Profile</string>
    <string name="change_password">Change Password</string>
    <string name="factor">Two-factor authentication </string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="navigation_menu_open">Open Navigation Drawer</string>
    <string name="navigation_menu_close">Close Navigation Drawer</string>

    <!-- Base application theme. -->
    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
        <!-- Customize your theme here. -->
        <item name="colorPrimary">@color/colorPrimary</item>
        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
        <item name="colorAccent">@color/colorAccent</item>
    </style>

    <style name="AppTheme.NoActionBar">
        <item name="windowActionBar">false</item>
        <item name="windowNoTitle">true</item>
    </style>

    <!--styles for education app-->
    <style name="viewParent">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
    </style>

    <style name="viewParent.headerText">
        <item name="android:textColor">@color/contentTextColor</item>
        <item name="android:textSize">@dimen/headerTextSize</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="viewParent.headerText.settingsMiniTitle">
        <item name="android:textColor">#5D5C5C</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:textSize">15sp</item>
        <item name="android:layout_marginTop">20dp</item>
    </style>

    <style name="settingsText" parent="viewParent.headerText.settingsMiniTitle">
        <item name="android:textColor">@color/miniTitle</item>
        <item name="android:layout_gravity">center_vertical</item>
        <item name="android:gravity">center_vertical</item>
        <item name="android:drawablePadding">20dp</item>
    </style>

    <style name="viewParent.headerText.settingsTextIcon" parent="settingsText">
        <item name="android:drawableRight">@drawable/ic_more</item>
    </style>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    Verify -->
    <string name="title_activity_verifai_result">VerifaiResultActivity</string>
    <string name="button_core_start_text">Start Core</string>
    <string name="button_nfc_start_text">Start NFC</string>
    <string name="button_liveness_start_text">Start Liveness</string>


    <!--    Nav Menu-->
    <string name="account">Account</string>
    <string name="setting">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="verify">Verification</string>

    <!--    Phone number Verification -->

    <string name="otp_verify">OTP Verification</string>
    <string name="otp_tip">The OTP will be sent to this number</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="otp">OTP Received</string>
    <string name="otp_put">Enter the OTP sent to </string>
    <string name="country_code">+254</string>
    <string name="otp_phone">702345678</string>
    <string name="otp_get">GET OTP</string>
    <string name="verify_otp">VERIFY</string>
    <string name="no_otp">Didn\'t receive the OTP? </string>
    <string name="resend_otp">Resend</string>
    <string name="user_verify">Identity Verification</string>
    <string name="phone_verify">Phone Number</string>
    <string name="otp_phone_verify">Verify Phone Number</string>
    <string name="email_verify">Email</string>
    <string name="verify_email">Verify Email</string>

    <!--    Car Verification -->
    <string name="identity">Verify Yourself</string>
    <string name="yourself">Identity</string>
    <string name="car">Car Verification</string>
    <string name="car_info_verify">Verify Car</string>
    <string name="passenger_name">Passenger Name</string>
    <!--    Created rides -->
    <string name="confirm">Confirm</string>
    <string name="booked_seats">Booked Seats</string>
    <string name="todo_do">TODO</string>
    <string name="deny">Deny</string>
    <string name="passengers">Passengers</string>
    <string name="_1800hrs">1800hrs</string>
    <string name="pickup_time">Pickup Time:</string>
    <string name="_10">10</string>
    <string name="available_seats">Available Seats:</string>
    <string name="event_location">Event Location</string>
    <string name="organizer_s_phone">Organizer\'s Phone</string>
    <string name="event_name">Event Name</string>
    <string name="my_created_rides">My Created Rides</string>
    <string name="confirmed">Confirmed</string>
    <string name="deny_ride">Deny</string>
    <string name="conf_ride">Confirm</string>
    <string name="created_rides">Created Rides</string>
    <string name="joined_rides">Joined Rides</string>
    <string name="joined">Joined</string>
    <string name="single_rides">Available single rides</string>
    <string name="group_rides">Available group rides</string>
    <string name="create_ride">Create Ride</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="car_type"><![CDATA[Car Model & Plate]]></string>
    <string name="available_seats_create">Available Seats</string>
    <string name="create_phone_number">Phone number</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="add_pickup">Add PickUp</string>
    <string name="group_create_ride">Create Ride</string>
    <string name="create_group_ride">Create Group Ride</string>
    <string name="join_ride">Join Ride</string>
    <string name="join_ride_join">Join Ride</string>
    <string name="driver_name">Driver Name</string>
    <string name="pickup_to_dropoff">Pickup to Dropoff</string>
    <string name="date_and_time">Date and Time</string>
    <string name="cancel_ride">Cancel</string>
    <string name="pickup_time_jin">Pickup TIme:</string>
    <string name="_10_">10</string>
    <string name="location">Location</string>
    <string name="pickup_location">Pickup Location:</string>
    <string name="organizer_s_phone_">Organizer\'s Phone</string>
    <string name="event_location_">Event Location</string>
    <string name="event_name_">Event Name</string>
    <string name="joined_event">Joined Event</string>
    <string name="available_seats_">Available Seats:</string>
    <string name="_1800hrs_">1800hrs</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="get_started">Get Started</string>
    <string name="email_start">Email</string>
    <string name="new_to_ride_pal">Create account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create account</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_user">New User?</string>


</resources>