<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_account_box_24"
            android:title="@string/account"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/setting"/>
        <item
            android:id="@+id/nav_verification"
            android:icon="@drawable/baseline_verified_user_24"
            android:title="@string/verify"/>

    </group>
    <item
        android:title="">

        <menu>

            <item
                android:id="@+id/help"
                android:icon="@drawable/baseline_help_24"
                android:title="Payments"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"/>

        </menu>


    </item>

</menu>