<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="-10dp"
        android:background="@color/loginBkColor"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="1dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/joinedEventBack"
            android:background="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/todo_do" />

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/joined_event"
            android:textColor="@android:color/black" />
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp">

        <TextView
            android:id="@+id/joinedEventNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/event_name_"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/joinedEventLocationDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:textSize="20sp"
        android:text="@string/event_location_"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/organizerPhoneDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:textSize="20sp"
        android:text="@string/organizer_s_phone_"
        android:layout_marginBottom="8dp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/pickup_location"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/joinedPickupLocationDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:text="@string/location"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/available_seats_"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/bookedSeatsDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:text="@string/_10_"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        tools:ignore="RtlSymmetry">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/pickup_time_jin"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/joinedPickupTimeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:text="@string/_1800hrs_"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>


    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_whatsapp_24"
            android:id="@+id/whatsappicon"
            android:contentDescription="@string/todo_do" />
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_ride"
            android:text="@string/cancel_ride"/>

    </LinearLayout>



</LinearLayout>