<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="-10dp"
        android:background="@color/loginBkColor"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="1dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createdBack"
            android:background="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/todo_do" />

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/my_created_rides"
            android:textColor="@android:color/black" />
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp">

        <TextView
            android:id="@+id/eventNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/event_name"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/eventLocationDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:textSize="20sp"
        android:text="@string/event_location"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/organizerPhoneDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:textSize="20sp"
        android:text="@string/organizer_s_phone"
        android:layout_marginBottom="8dp"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:paddingStart="5dp"
        android:id="@+id/pickupLocationDetailSpinner"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/available_seats"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/availableSeatsDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:text="@string/_10"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/pickup_time"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/pickupTimeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:text="@string/_1800hrs"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/pickupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/passengers"
        android:layout_marginBottom="8dp"/>

    <!-- RecyclerView to display list of pickups -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPassengers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

</LinearLayout>