<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RideDetails">
    <TextView
        android:id="@+id/textViewDriverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewPickupDropoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_to_dropoff"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textViewDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_and_time"
        android:layout_marginTop="16dp" />

</LinearLayout>