<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".SendOtp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    
    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icons_sent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/otp_verify"
        android:textSize="20sp"
        android:textStyle="bold"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/otp_tip"
        android:textSize="18sp"
        android:textColor="@color/colorTextPrimary"
        />

    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/enter_phone_number"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:background="@color/colorDivider"

        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/country_code"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        
        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@null"
            android:hint="@string/otp_phone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:importantForAutofill="no"
            android:textColor="@color/colorTextPrimary"/>
        
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/getOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:text="@string/otp_get"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />
        
    </FrameLayout>
    

    


</LinearLayout>

</ScrollView>